# backtest_cpp

./: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/: Backtest.hpp  BacktestHandler.hpp
core/source/: Backtest.cpp
indicators/: CMakeLists.txt
indicators/moving_averages/: CMakeLists.txt
indicators/moving_averages/include/: ExponentialMovingAverage.hpp  MovingAverage.hpp  SimpleMovingAverage.hpp
indicators/moving_averages/sources/: ExponentialMovingAverage.cpp  SimpleMovingAverage.cpp
test/: btc_1min.yaml
